--- a/eStore/Views/Login/Index.cshtml
+++ b/eStore/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model BusinessObject.Member
+@{
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -29,9 +30,9 @@
     </div>
 </div>
 
-@*<div>
-        <a asp-action="Index">Back to List</a>
-    </div>*@
+<div>
+    <p>Not a member? <a href="/Signup">Signup</a></p>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
