--- a/eStore/Views/Product/Details.cshtml
+++ b/eStore/Views/Product/Details.cshtml
@@ -91,7 +91,7 @@ else
     <div>
         @if (role.Equals("Admin"))
         {
-            <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> @Html.Raw("|");
+            <a class="btn btn-info" asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> @Html.Raw("|");
         }
         else if (role.Equals("User"))
         {
@@ -109,6 +109,6 @@ else
                 <input type="submit" class="btn btn-primary" value="Add To Cart" />
             </form>
         }
-        <a asp-action="Index"> Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index"> Back to List</a>
     </div>
 }
