--- a/eStore/Views/Member/Delete.cshtml
+++ b/eStore/Views/Member/Delete.cshtml
@@ -12,7 +12,7 @@
         @ViewBag.Error
     </div>
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </div>
 }
 else
@@ -61,7 +61,13 @@ else
         <form asp-action="Delete">
             <input type="hidden" asp-for="MemberId" />
             <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-action="Index">Back to List</a>
+            <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
         </form>
     </div>
+
+    <style>
+        .row a {
+            text-decoration: none;
+        }
+    </style>
 }
