--- a/eStore/Views/Member/Details.cshtml
+++ b/eStore/Views/Member/Details.cshtml
@@ -63,8 +63,15 @@ else
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.MemberId">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-info" asp-action="Edit" asp-route-id="@Model.MemberId">Edit</a> |
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </div>
+
+        <style>
+
+            .row a {
+                text-decoration: none;
+            }
+        </style>
 }
 
