--- a/eStore/Views/Member/Edit.cshtml
+++ b/eStore/Views/Member/Edit.cshtml
@@ -14,7 +14,7 @@
         @ViewBag.Error
     </div>
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </div>
 }
 else
@@ -78,7 +78,7 @@ else
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </div>
 }
 @section Scripts {
