--- a/eStore/Views/Order/Index.cshtml
+++ b/eStore/Views/Order/Index.cshtml
@@ -60,8 +60,8 @@ else
 {
     @if (Model != null && Model.Any())
     {
-        <table class="table">
-            <thead>
+        <table class="table table-hover table-bordered table-striped">
+            <thead class="table-primary">
                 <tr>
                     <th>
                         Order ID
@@ -75,7 +75,9 @@ else
                     <th>
                         Order Total
                     </th>
-                    <th></th>
+                    <th>
+                        Action
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -95,8 +97,8 @@ else
                             @ViewData[item.OrderId.ToString()]
                         </td>
                         <td>
-                            <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
+                            <a class="btn btn-success" asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
+                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
                         </td>
                     </tr>
                 }
@@ -122,5 +124,9 @@ else
     {
         <div class="text-danger">No results found!!</div>
     }
-
+    <style>
+        .table tbody tr:hover {
+            background-color: lightblue;
+        }
+    </style>
 }
