--- a/eStore/Views/Product/Edit.cshtml
+++ b/eStore/Views/Product/Edit.cshtml
@@ -14,7 +14,7 @@
         @ViewBag.Error
     </div>
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </div>
 }
 else
@@ -30,7 +30,11 @@ else
                 <div class="form-group">
                     <label asp-for="CategoryId" class="control-label"></label>
                     <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.Category"></select>
-                    <small class="text-muted form-text"><a asp-action="Create" asp-controller="Category" data-toggle="modal" data-target="#createCategory">Create new Category</a></small>
+                    <small class="text-muted form-text">
+                        <a class="btn btn-sm btn-outline-info" asp-action="Create" asp-controller="Category" data-toggle="modal" data-target="#createCategory">
+                            + Create new Category
+                        </a>
+                    </small>
                 </div>
                 <div class="form-group">
                     <label asp-for="ProductName" class="control-label"></label>
@@ -60,7 +64,7 @@ else
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
     </div>
 
     <!-- Modal -->
@@ -95,7 +99,8 @@ else
 }
 @section Scripts {
     <script src="~/js/createCategory.js"></script>
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
 
