--- a/eStore/wwwroot/css/site.css
+++ b/eStore/wwwroot/css/site.css
@@ -71,3 +71,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.product {
+    width: 25%;
+    border: 1px solid saddlebrown;
+    margin: 0px 10px;
+    background-color: rgba(247, 240, 244, 0.8);
+}
+
+#product img {
+    width: 20%;
+}
+
+
