--- a/eStore/Views/Login/Index.cshtml
+++ b/eStore/Views/Login/Index.cshtml
@@ -32,6 +32,7 @@
 
 <div>
     <p>Not a member? <a href="/Signup">Signup</a></p>
+    <P><a href="/ForgotPass">Forgot password</a></P>
 </div>
 
 @section Scripts {
