--- a/eStore/Views/Signup/Index.cshtml
+++ b/eStore/Views/Signup/Index.cshtml
@@ -54,8 +54,8 @@
                 <input id="Confirm" name="Confirm" class="form-control" type="password" required />
             </div>
         </div>
-        <div class="form-group" style="width: 100%; margin-left: 15px;">
-            <input type="submit" style="width: 100%" value="Create" class="btn btn-primary" />
+        <div class="form-group"  style="margin: 0px 0px 0px 600px;">
+            <input type="submit"  value="Create" class="btn btn-primary" />
             </div>
         
         </form>
