--- a/eStore/Views/Product/Details.cshtml
+++ b/eStore/Views/Product/Details.cshtml
@@ -103,12 +103,9 @@ else
                 </div>
             </div>
 
-
-
-
         }
 
-        <a class="btn btn-outline-dark" asp-action="Index"> Back to List</a>
+        <a class="btn btn-outline-dark" asp-action="Index" style="margin-bottom: 50px"> Back to List</a>
 
     </div>
 }
