--- a/eStore/Views/Cart/Index.cshtml
+++ b/eStore/Views/Cart/Index.cshtml
@@ -32,8 +32,9 @@ else
         <table class="table table-hover table-bordered table-striped">
             <thead class="table-primary">
                 <tr>
+                    <th></th>
                     <th>
-                        Product Name
+                        Product Name                      
                     </th>
                     <th>
                         Quantity
@@ -52,8 +53,9 @@ else
             @foreach (var cartItem in Model)
             {
                 Product product = productRepository.GetProduct(cartItem.ProductId);
-        <form asp-action="UpdateCart" method="get">
+                <form asp-action="UpdateCart" method="get">
             <tr>
+                    <td style="width:20%"><img style="width: 100%" src="~/img/image.jpg" /></td>
                 <td>
                     <input class="form-control" type="hidden" name="ProductId" id="ProductId" value="@cartItem.ProductId" />
                     @Html.DisplayFor(modelItem => cartItem.ProductName)
@@ -71,13 +73,14 @@ else
                     <input type="submit" class="btn btn-outline-info" value="Update" />
                     <a class="btn btn-outline-danger" asp-action="RemoveFromCart" asp-route-productId="@cartItem.ProductId">Remove</a>
                 </td>
+                
             </tr>
         </form>
             }
             <tbody>
             </tbody>
         </table>
-        <a asp-action="CheckOut" class="btn btn-outline-success mt-3">Order</a>
+        <a asp-action="Order" class="btn btn-outline-success mt-3">Order</a>
 
                 <style>
                 .table tbody tr:hover {
