--- a/eStore/Views/Shared/_Layout.cshtml
+++ b/eStore/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
           rel="stylesheet" />
-
+    <link rel="icon" type="image/png" href="https://scontent.fhan5-1.fna.fbcdn.net/v/t39.30808-6/272028866_110061908250795_8975520843648918379_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=fH_T6LGFYacAX-A8bbP&_nc_ht=scontent.fhan5-1.fna&oh=00_AfA0QfMvA0ieKlYkWNXEvLk1sXqM7TCRLvHMN-D74OpyFw&oe=641F4EE1">
 </head>
 <body>
     <header>
@@ -171,7 +171,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            @*&copy; 2021 - eStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
