--- a/eStore/Views/Order/Details.cshtml
+++ b/eStore/Views/Order/Details.cshtml
@@ -70,7 +70,7 @@ else
                 {
                     decimal price = Math.Round(orderDetails.UnitPrice * (1 - Convert.ToDecimal(orderDetails.Discount)), 2);
                     <tr>
-                        <td style="width: 20%"><img style="width: 100%" src="~/img/image.jpg" /></td>
+                        <td style="width: 20%"><img style="width: 100%" src="~/img/img1.webp" /></td>
                         <td>
                             @orderDetails.Product.ProductName
                         </td>
