--- a/eStore/Views/Product/Index1.cshtml
+++ b/eStore/Views/Product/Index1.cshtml
@@ -83,37 +83,37 @@
                     <div class="col-md-3">
                         <label for="from" class="d-inline">Unit Price:</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class=" col-md-4 d-flex">
                         <div class="row">
-                            <div class="col-md-2">
-                                <label for="form" class="d-inline">From</label>
+                            <div class="col-md-11">
+                                <div class="form-outline">
+                                    <input name="from" type="number" id="from" class="form-control" aria-describedby="unitPriceHelp" value="@ViewBag.Search" />
+                                    <label class="form-label" for="form1">Unit Price: From ($)</label>
+                                </div>
                             </div>
-                            <div class="col-md-10">
-                                <input id="from" name="from" aria-describedby="unitPriceHelp" class="d-inline form-control" value="@ViewBag.From" type="number" />
+                        </div>
+                        <div class="row">
+                            <div class="col-md-11">
+                                <div class="form-outline">
+                                    <input name="to" type="number" id="to" class="form-control" aria-describedby="unitPriceHelp" value="@ViewBag.Search" />
+                                    <label class="form-label" for="form1">Unit Price: To ($)</label>
+                                </div>
                             </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-11">
+                                <button type="submit" class="btn btn-primary" name="Search">
+                                    <i class="fas fa-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <label for="to" class="d-inline">To</label>
-                            </div>
-                            <div class="col-md-10">
-                                <input id="to" name="to" class="d-block form-control" value="@ViewBag.To" type="number" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-md-3">
-                        <small id="unitPriceHelp" class="form-text text-muted">Leave the two inputs both blank if you don't want to filter by Unit Price</small>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-3">
-                        <input type="submit" class="btn btn-outline-primary d-inline mt-sm-3 mt-md-0" value="Search" />
-                    </div>
+            </div>
+            <div class="row">
+                <div class="offset-md-3">
+                    <small id="unitPriceHelp" class="form-text text-muted">Leave the two inputs both blank if you don't want to filter by Unit Price</small>
                 </div>
             </div>
         </form>
